--- a/_includes/navbar.njk
+++ b/_includes/navbar.njk
@@ -1,8 +1,8 @@
  <nav>
-    <a id="logo" href="/" ></a>
+    <a id="logo" href="{{ '/' | url }}" ></a>
     <ul>
-        <li><a href="/tutorials">Tutorials</a></li>
-        <li><a href="/docs">Docs</a></li>
+        <li><a href="{{ '/tutorials' | url }}">Tutorials</a></li>
+        <li><a href="{{ '/docs' | url }}">Docs</a></li>
     </ul>
     <a id="github" href="https://github.com/tfukaza/harvest"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" /></a>
 </nav>
