--- a/_includes/boilerplate.njk
+++ b/_includes/boilerplate.njk
@@ -21,5 +21,5 @@
         {{ content | safe }}
     </main>
     {% include 'footer.njk' %}
-    <script src="/asset/prism.js"></script>
+    <script src="{{ '/asset/prism.js' | url }}"></script>
 </body>
