--- a/_includes/navbar.njk
+++ b/_includes/navbar.njk
@@ -1,5 +1,10 @@
  <nav>
-    <a id="logo" href="{{ '/' | url }}" ></a>
+    <a id="logo" href="{{ '/' | url }}" >       
+        <img src="{{ '/asset/logo.svg' | url }}"/>
+    </a>
+    <!-- <a id="logo-mobile" href="{{ '/' | url }}" >
+        <img src="{{ '/asset/logo-mobile.svg' | url }}"/>
+    </a> -->
     <ul>
         <li><a href="{{ '/tutorials' | url }}">Tutorials</a></li>
         <li><a href="{{ '/docs' | url }}">Docs</a></li>
