--- a/sass/main.scss
+++ b/sass/main.scss
@@ -126,9 +126,6 @@ button{
     cursor: pointer;
 }
 
-#logo{
-    height:30px;
-}
 
 h1, h2, h3, h4, h5, h6{
     font-family: 'Manrope', sans-serif;
@@ -183,17 +180,11 @@ nav{
         position: absolute;
         left: Calc(50% - 500px);
         width:100px;
-        background-image: url('/asset/wordmark.svg');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-
-    }
-    @media screen and (max-width: 768px){
-        #logo{
-            left: 10px;
-            width:50px;
-            background-image: url('/asset/wordmark-mobile.svg');
+        height:30px;
+        @media screen and (max-width: 768px){
+            left:10px;
+            width:30px;
+            overflow-x: hidden;
         }
     }
     #github{
