--- a/sass/tutorial_page.scss
+++ b/sass/tutorial_page.scss
@@ -27,6 +27,10 @@ article{
         }
     }
 
+    img{
+        margin-left: -50%;
+    }
+
     h1{ font-size: 40px; }
     h2{ font-size: 30px; }
     h3{ font-size: 20px; }
