--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -16,7 +16,6 @@
         
         font-size:1.5rem;
         line-height: 105%;
-        letter-spacing: -0.05em;
 
         width:500px;
     }
@@ -66,18 +65,201 @@
     margin-left: 5px;
 }
 
-.card{
-    h2, p{
+#intro{
+    h2{
+        font-size: 3.3rem;
+    }
+    p{
+        font-size: 1.5rem;
+        line-height: 130%;
+    }
+    .card{
+        padding: 50px;
+        border-radius: 30px;
+    }
+    @media screen and (max-width: 768px){
+        h2{
+            font-size: 2.5rem;
+        }
+        p{
+            font-size: 1.3rem;
+            line-height: 130%;
+        }
+        .card{
+            padding: 30px;
+        }
+        
+    }
+}
+
+#beginner-friendly{
+    background-color: white;
+    h2{
+        background: rgb(0,209,255);
+        background: -webkit-linear-gradient(135deg, #3EE90C 0%, #ADEB1D 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        > span {
+            -webkit-text-fill-color: white;
+        }
+    }
+}
+
+#modular-moddable{
+    background-color: #252D35;
+    h2{
+        background: rgb(0,209,255);
+        background: -webkit-linear-gradient(135deg, rgba(0,209,255,1) 0%, rgba(211,0,255,1) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        > span {
+            -webkit-text-fill-color: white;
+        }
+    }
+    p{
         color: white;
     }
 }
 
-.card:nth-of-type(n+1){
-    background-color: #1dbf92;
+
+
+#try{
+    > div > *{
+        display: inline-block;
+    }
+
+    > h2{
+        text-align: center;
+        font-size: 3.3rem;
+        margin-bottom: 0rem;
+    }
+
+    > p{
+        text-align: center;
+        font-size: 1.2rem;
+        margin-top: 0.8rem;
+        margin-bottom: 3rem;
+    }
 }
-.card:nth-of-type(n+2){
-    background-color: #36b7f3;
+
+#symbols{
+    background-color: white;
+    min-width: 150px;
+    margin-left: 20px;
+
+    span{
+        background-color: #188d7d;
+        box-shadow: 0px 2px 10px rgb(33 46 51 / 14%);
+        border-radius: 20px;
+        padding: 5px 15px;
+        color: white;
+        font-weight: bold;
+        margin: 0px 5px;
+    }
+
 }
-.card:nth-of-type(n+3){
-    background-color: #78d62b;
+
+
+
+#try-text{
+    grid-column: 1 / 6;
+    background-color: #f7f5f3;
+    border-radius: 20px;
+    padding: 40px;
+    > p{
+        line-height: 100%;
+    }
+    .select{
+        //margin: 1px 0px;
+    }
+    @media screen and (max-width: 768px){
+        grid-column: 1 / 13;
+        padding: 20px;
+        
+    }
+}
+ .code-header{
+    width: 100%;
+    height: 36px;
+    background-color: #3a3c44;
+    margin-bottom: 10px;
+    padding: 0px 10px;
+    box-sizing: border-box;
+    div{
+        width:12px;
+        height:12px;
+        border-radius: 6px;
+        position: relative;
+        display: inline-block;
+        margin: 11px 2.5px;
+    }
+    .red{
+        background-color: #d81741;
+    }
+    .green{
+        background-color: #45d419;
+    }
+    .yellow{
+        background-color: #eecc0c;
+    }
+}
+
+
+#try-code{
+    grid-column: 6 / 13;
+    background-color: #292A2E;
+    border-radius: 20px;
+    overflow: hidden;
+
+    code{
+        position: relative;
+    }
+
+    pre{
+        margin-left: 60px;
+        margin-top: 0px;
+        font-size: 1rem;
+        color: white;
+    }
+
+    @media screen and (max-width: 768px){
+        grid-column: 1 / 13;
+        margin-top: 20px;
+        pre{
+            
+        }
+        
+    }
+
+   
+
+    .line-numbers{
+        counter-reset: num;
+        position: absolute;
+        top:0;
+        left:0;
+        width:40px;
+        border-right: 2px solid #4b4b4b;
+        padding-right: 10px;
+        text-align: right;
+        .number{
+            display: block;
+        }
+        .number::before{
+            content: counter(num);
+            counter-increment: num;
+            color: #777777;
+            font-size: 1rem;
+            font-family: 'Fira Code', monospace;
+        }
+    }
+}
+
+#try-shell{
+    grid-column: 6 / 13;
+    background-color: #292A2E;
+    border-radius: 20px;
+    overflow: hidden;
 }
