deploy: 5ae90130a8aa6c51777545a85bcd6ae38b7b3f52

--- a/css/tutorial_page.css
+++ b/css/tutorial_page.css
@@ -318,6 +318,9 @@ article pre, article code {
     grid-column: 1/-1;
   }
 }
+article img {
+  margin-left: -50%;
+}
 article h1 {
   font-size: 40px;
 }
