--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -14,8 +14,8 @@
     p{
         margin-top: 2rem;
         
-        font-size:1.5rem;
-        line-height: 105%;
+        font-size:1.2rem;
+        line-height: 120%;
 
         width:500px;
     }
@@ -96,7 +96,7 @@
     background-color: white;
     h2{
         background: rgb(0,209,255);
-        background: -webkit-linear-gradient(135deg, #3EE90C 0%, #ADEB1D 100%);
+        background: -webkit-linear-gradient(70deg, #3EE90C 0%, #ADEB1D 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
 
@@ -110,7 +110,7 @@
     background-color: #252D35;
     h2{
         background: rgb(0,209,255);
-        background: -webkit-linear-gradient(135deg, rgba(0,209,255,1) 0%, rgba(211,0,255,1) 100%);
+        background: -webkit-linear-gradient(70deg, rgb(58, 255, 255) 0%, rgba(211,0,255,1) 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
 
@@ -131,21 +131,32 @@
     }
 
     > h2{
-        text-align: center;
-        font-size: 3.3rem;
+        text-align: left;
+        font-size: 5.0rem;
         margin-bottom: 0rem;
+        @media screen and (max-width: 768px){
+            font-size: 2.0rem;
+            
+        }
     }
 
     > p{
-        text-align: center;
-        font-size: 1.2rem;
+        text-align: left;
+        font-size: 1.8rem;
         margin-top: 0.8rem;
         margin-bottom: 3rem;
+        line-height: 120%;
+        width: 40%;
+        @media screen and (max-width: 768px){
+           font-size: 1.2rem;
+           width: 100%;
+            
+        }
     }
 }
 
 #symbols{
-    background-color: white;
+    background-color: rgb(243, 243, 243);
     min-width: 150px;
     margin-left: 20px;
 
@@ -165,8 +176,8 @@
 
 #try-text{
     grid-column: 1 / 6;
-    background-color: #f7f5f3;
-    border-radius: 20px;
+    //background-color: #f7f5f3;
+    border-radius: 18px;
     padding: 40px;
     > p{
         line-height: 100%;
@@ -183,7 +194,7 @@
  .code-header{
     width: 100%;
     height: 36px;
-    background-color: #3a3c44;
+    background-color: #373b49;
     margin-bottom: 10px;
     padding: 0px 10px;
     box-sizing: border-box;
@@ -194,30 +205,40 @@
         position: relative;
         display: inline-block;
         margin: 11px 2.5px;
-        margin-top: 12px;
+        margin-top: 13px;
     }
     .red{
-        background-color: #d81741;
+        background-color: #ee365e;
     }
     .green{
-        background-color: #45d419;
+        background-color: #63f736;
     }
     .yellow{
-        background-color: #eecc0c;
+        background-color: #ffe23b;
+    }
+
+    p{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 9px;
+        font-size: 0.8rem;
     }
 }
 
 .code-content{
     position: relative;
     width: 100%;
-    overflow-x: scroll;
+    @media screen and (max-width: 768px){
+         overflow-x: scroll;
+    }
+   
 }
 
 
 #try-code{
     position: relative;
     grid-column: 6 / 13;
-    background-color: #292A2E;
+    background-color: #292c38;
     border-radius: 20px;
     z-index: 1;
     overflow: hidden;
@@ -255,7 +276,7 @@
         position: absolute;
         top:46px;
         left:0px;
-        background-color: #292A2E;
+        //background-color: #292A2E;
         width:40px;
         border-right: 1px solid #454a5a;
         padding-right: 10px;
