deploy: 64f579d2db21550bc26192093905e677e1d8f442

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,8 @@ section {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: 30px;
-  margin: 60px auto;
+  margin: 0px auto;
+  padding: 60px;
   width: 1000px;
 }
 section > * {
