--- a/css/landing.css
+++ b/css/landing.css
@@ -14,8 +14,8 @@
 }
 #main p {
   margin-top: 2rem;
-  font-size: 1.5rem;
-  line-height: 105%;
+  font-size: 1.2rem;
+  line-height: 120%;
   width: 500px;
 }
 #main a {
@@ -87,7 +87,7 @@
 }
 #beginner-friendly h2 {
   background: #00d1ff;
-  background: -webkit-linear-gradient(135deg, #3EE90C 0%, #ADEB1D 100%);
+  background: -webkit-linear-gradient(70deg, #3EE90C 0%, #ADEB1D 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -100,7 +100,7 @@
 }
 #modular-moddable h2 {
   background: #00d1ff;
-  background: -webkit-linear-gradient(135deg, #00d1ff 0%, #d300ff 100%);
+  background: -webkit-linear-gradient(70deg, #3affff 0%, #d300ff 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -115,19 +115,32 @@
   display: inline-block;
 }
 #try > h2 {
-  text-align: center;
-  font-size: 3.3rem;
+  text-align: left;
+  font-size: 5rem;
   margin-bottom: 0rem;
 }
+@media screen and (max-width: 768px) {
+  #try > h2 {
+    font-size: 2rem;
+  }
+}
 #try > p {
-  text-align: center;
-  font-size: 1.2rem;
+  text-align: left;
+  font-size: 1.8rem;
   margin-top: 0.8rem;
   margin-bottom: 3rem;
+  line-height: 120%;
+  width: 40%;
+}
+@media screen and (max-width: 768px) {
+  #try > p {
+    font-size: 1.2rem;
+    width: 100%;
+  }
 }
 
 #symbols {
-  background-color: white;
+  background-color: #f3f3f3;
   min-width: 150px;
   margin-left: 20px;
 }
@@ -143,8 +156,7 @@
 
 #try-text {
   grid-column: 1/6;
-  background-color: #f7f5f3;
-  border-radius: 20px;
+  border-radius: 18px;
   padding: 40px;
 }
 #try-text > p {
@@ -160,7 +172,7 @@
 .code-header {
   width: 100%;
   height: 36px;
-  background-color: #3a3c44;
+  background-color: #373b49;
   margin-bottom: 10px;
   padding: 0px 10px;
   box-sizing: border-box;
@@ -172,28 +184,38 @@
   position: relative;
   display: inline-block;
   margin: 11px 2.5px;
-  margin-top: 12px;
+  margin-top: 13px;
 }
 .code-header .red {
-  background-color: #d81741;
+  background-color: #ee365e;
 }
 .code-header .green {
-  background-color: #45d419;
+  background-color: #63f736;
 }
 .code-header .yellow {
-  background-color: #eecc0c;
+  background-color: #ffe23b;
+}
+.code-header p {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 9px;
+  font-size: 0.8rem;
 }
 
 .code-content {
   position: relative;
   width: 100%;
-  overflow-x: scroll;
+}
+@media screen and (max-width: 768px) {
+  .code-content {
+    overflow-x: scroll;
+  }
 }
 
 #try-code {
   position: relative;
   grid-column: 6/13;
-  background-color: #292A2E;
+  background-color: #292c38;
   border-radius: 20px;
   z-index: 1;
   overflow: hidden;
@@ -224,7 +246,6 @@
   position: absolute;
   top: 46px;
   left: 0px;
-  background-color: #292A2E;
   width: 40px;
   border-right: 1px solid #454a5a;
   padding-right: 10px;
