Fix code section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -51,7 +51,8 @@ section{
 @media screen and (max-width: 768px){
     section{
         width: 90%;
-        margin: 30px auto;
+        margin: 0px 5%;
+        padding: 0px;
     }
 }
 
