--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -15,7 +15,7 @@
         margin-top: 2rem;
         
         font-size:1.2rem;
-        line-height: 120%;
+        line-height: 1.6rem;
 
         width:500px;
     }
@@ -36,7 +36,8 @@
         }
         p{
             margin-top: 1.5rem;
-            font-size:1.5rem;
+            font-size: 1.2rem;
+            line-height: 1.6rem;
             width:80%;
         }
         a{
@@ -140,9 +141,19 @@
         }
     }
 
+    h4{
+        width: 100%;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 0.8rem;
+        letter-spacing: 0.3rem;
+        color:rgb(133, 133, 133);
+        margin: 23px 0px 9px 0px;
+    }
+
     > p{
         text-align: left;
-        font-size: 1.8rem;
+        font-size: 1.4rem;
         margin-top: 0.8rem;
         margin-bottom: 3rem;
         line-height: 120%;
@@ -158,7 +169,6 @@
 #symbols{
     background-color: rgb(243, 243, 243);
     min-width: 150px;
-    margin-left: 20px;
 
     span{
         background-color: #188d7d;
@@ -178,7 +188,7 @@
     grid-column: 1 / 6;
     //background-color: #f7f5f3;
     border-radius: 18px;
-    padding: 40px;
+    //padding: 40px;
     > p{
         line-height: 100%;
     }
@@ -191,11 +201,29 @@
         
     }
 }
- .code-header{
-    width: 100%;
+ 
+
+#try-code{
+    position: relative;
+    grid-column: 6 / 13;
+    background-color: #292c38;
+    border-radius: 20px;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    grid-template-rows: 36px 1fr;
+    overflow: hidden;
+
+    @media screen and (max-width: 768px){
+        grid-column: 1/13;
+    }
+    
+}
+.code-header{
+    grid-column: 1/3;
+    grid-row: 1/2;
     height: 36px;
     background-color: #373b49;
-    margin-bottom: 10px;
     padding: 0px 10px;
     box-sizing: border-box;
     div{
@@ -226,8 +254,20 @@
 }
 
 .code-content{
-    position: relative;
-    width: 100%;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    font-family: 'Fira Code';
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+    color:rgb(243, 243, 243);
+    overflow-x: scroll;
+    padding-left: 20px;
+
+    div{
+        white-space: pre-wrap;
+        width:200%;
+    }
+
     @media screen and (max-width: 768px){
          overflow-x: scroll;
     }
@@ -235,69 +275,35 @@
 }
 
 
-#try-code{
-    position: relative;
-    grid-column: 6 / 13;
-    background-color: #292c38;
-    border-radius: 20px;
+.line-numbers{
+    //counter-reset: num;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    //background-color: #292A2E;
+    border-right: 1px solid #454a5a;
+    padding-right: 10px;
+    text-align: right;
     z-index: 1;
-    overflow: hidden;
-    
-    code{
-        width: 100%;
-        position: relative;
-        
+    .number{
+        display: block;
+        font-family: 'Fira Code', monospace;
+        color: #777777;
+        font-size: 0.9rem;
+        line-height: 1.3rem;
     }
-
-    pre{
-        margin-left: 60px;
-        margin-top: 0px;
-        font-size: 1rem;
-        color: white;
-        @media screen and (max-width: 768px){
-           font-size: 0.9rem;
+    // .number::before{
+    //     content: counter(num);
+    //     counter-increment: num;
+    //     color: #777777;
+    //     font-size: 0.9rem;
+    //     font-family: 'Fira Code', monospace;
+    //     @media screen and (max-width: 768px){
+    //         font-size: 0.9rem;
             
-        }
-    }
-
-    @media screen and (max-width: 768px){
-        grid-column: 1 / 13;
-        margin-top: 20px;
-        pre{
-            
-        }
-        
-    }
-
-   
-
-    .line-numbers{
-        counter-reset: num;
-        position: absolute;
-        top:46px;
-        left:0px;
-        //background-color: #292A2E;
-        width:40px;
-        border-right: 1px solid #454a5a;
-        padding-right: 10px;
-        text-align: right;
-        z-index: 1;
-        .number{
-            display: block;
-        }
-        .number::before{
-            content: counter(num);
-            counter-increment: num;
-            color: #777777;
-            font-size: 1rem;
-            font-family: 'Fira Code', monospace;
-            @media screen and (max-width: 768px){
-                font-size: 0.9rem;
-                
-            }
-        }
-    }
+    //     }
+    // }
 }
+
 
 #try-shell{
     grid-column: 6 / 13;
