--- a/src/sass/docs.scss
+++ b/src/sass/docs.scss
@@ -1,25 +1,25 @@
-.card{
-    background-color: rgb(241, 241, 241);
-}
+// .card{
+//     background-color: rgb(241, 241, 241);
+// }
 
-.menu{
+// .menu{
 
-    display: inline-block;
-    width: 300px;
-    height:100vh;
-    position: fixed;
-    background-color: rgb(247, 247, 247);
-    padding: 30px;
-    box-sizing: border-box;
+//     display: inline-block;
+//     width: 300px;
+//     height:100vh;
+//     position: fixed;
+//     background-color: rgb(247, 247, 247);
+//     padding: 30px;
+//     box-sizing: border-box;
 
-    @media screen and (max-width:768px) {
-        display: none;
-    }
+//     @media screen and (max-width:768px) {
+//         display: none;
+//     }
     
-    a{
-        display: block;
-    }
-}
+//     a{
+//         display: block;
+//     }
+// }
 
 section{
     margin-left:300px;
