--- a/src/sass/landing.scss
+++ b/src/sass/landing.scss
@@ -1,51 +1,51 @@
-#main{
-    display: block;
-    h1, p, a {
-        margin: 0 auto;
-        text-align: center;
-        display: block;
-    }
-    h1{
-        width:600px;
-        line-height: 100%;
-        font-size: 5rem;
-        margin-top:15rem;
-    }
-    p{
-        margin-top: 2rem;
+// #main{
+//     display: block;
+//     h1, p, a {
+//         margin: 0 auto;
+//         text-align: center;
+//         display: block;
+//     }
+//     h1{
+//         width:600px;
+//         line-height: 100%;
+//         font-size: 5rem;
+//         margin-top:15rem;
+//     }
+//     p{
+//         margin-top: 2rem;
         
-        font-size:1.2rem;
-        line-height: 1.6rem;
+//         font-size:1.2rem;
+//         line-height: 1.6rem;
 
-        width:500px;
-    }
-    a{
-        margin: 80px auto;
-        margin-bottom: 100px;
-    }
-}
+//         width:500px;
+//     }
+//     a{
+//         margin: 80px auto;
+//         margin-bottom: 100px;
+//     }
+// }
 
-@media screen and (max-width: 768px){
-    #main{
+// @media screen and (max-width: 768px){
+//     #main{
         
-        h1{
-            width:80%;
-            line-height: 100%;
-            font-size: 4rem;
-            margin-top:10rem;
-        }
-        p{
-            margin-top: 1.5rem;
-            font-size: 1.2rem;
-            line-height: 1.6rem;
-            width:80%;
-        }
-        a{
-            margin: 40px auto;
-            margin-bottom: 50px;
-        }
-    }
-}
+//         h1{
+//             width:80%;
+//             line-height: 100%;
+//             font-size: 4rem;
+//             margin-top:10rem;
+//         }
+//         p{
+//             margin-top: 1.5rem;
+//             font-size: 1.2rem;
+//             line-height: 1.6rem;
+//             width:80%;
+//         }
+//         a{
+//             margin: 40px auto;
+//             margin-bottom: 50px;
+//         }
+//     }
+// }
 
 @keyframes wave {
     0% {
@@ -68,11 +68,10 @@
 
 #intro{
     h2{
-        font-size: 3.3rem;
+        
     }
     p{
-        font-size: 1.5rem;
-        line-height: 130%;
+        
     }
     .card{
         padding: 50px;
@@ -80,11 +79,11 @@
     }
     @media screen and (max-width: 768px){
         h2{
-            font-size: 2.5rem;
+            // font-size: 2.5rem;
         }
         p{
-            font-size: 1.3rem;
-            line-height: 130%;
+            // font-size: 1.3rem;
+            // line-height: 130%;
         }
         .card{
             padding: 30px;
@@ -95,29 +94,21 @@
 
 #beginner-friendly{
     background-color: white;
-    h2{
+    h1{
         background: rgb(0,209,255);
         background: -webkit-linear-gradient(70deg, #3EE90C 0%, #ADEB1D 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-
-        > span {
-            -webkit-text-fill-color: white;
-        }
     }
 }
 
 #modular-moddable{
     background-color: #252D35;
-    h2{
+    h1{
         background: rgb(0,209,255);
         background: -webkit-linear-gradient(70deg, rgb(58, 255, 255) 0%, rgba(211,0,255,1) 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-
-        > span {
-            -webkit-text-fill-color: white;
-        }
     }
     p{
         color: white;
@@ -126,99 +117,107 @@
 
 
 
-#try{
-    > div > *{
-        display: inline-block;
-    }
-
-    > h2{
-        text-align: left;
-        font-size: 5.0rem;
-        margin-bottom: 0rem;
-        @media screen and (max-width: 768px){
-            font-size: 2.0rem;
-            
-        }
-    }
+#config{
+   
 
     h4{
         width: 100%;
-        text-transform: uppercase;
+        //text-transform: uppercase;
         font-weight: 400;
         font-size: 0.8rem;
-        letter-spacing: 0.3rem;
+        letter-spacing: 0.05rem;
         color:rgb(133, 133, 133);
         margin: 23px 0px 9px 0px;
     }
 
     > p{
         text-align: left;
-        font-size: 1.4rem;
-        margin-top: 0.8rem;
-        margin-bottom: 3rem;
-        line-height: 120%;
         width: 40%;
         @media screen and (max-width: 768px){
-           font-size: 1.2rem;
            width: 100%;
             
         }
     }
 }
 
-#symbols{
-    background-color: rgb(243, 243, 243);
-    min-width: 150px;
 
+
+#watchlist{
     span{
         background-color: #188d7d;
         box-shadow: 0px 2px 10px rgb(33 46 51 / 14%);
         border-radius: 20px;
-        padding: 5px 15px;
-        color: white;
+        padding: 0px;
         font-weight: bold;
-        margin: 0px 5px;
-    }
+        overflow: hidden;
 
+        button{
+            padding: 3px 10px;
+            transition: 0.2s;
+        }
+        button:hover{
+            background-color: #08473f;
+        }
+
+        p{
+            margin:5px 5px 5px 15px;
+            color: white;
+            display: inline;
+        }
+    }
 }
 
-
-
-#try-text{
-    grid-column: 1 / 6;
-    //background-color: #f7f5f3;
-    border-radius: 18px;
-    //padding: 40px;
-    > p{
-        line-height: 100%;
-    }
-    .select{
-        //margin: 1px 0px;
-    }
-    @media screen and (max-width: 768px){
-        grid-column: 1 / 13;
-        padding: 20px;
+// #try-text{
+//     grid-column: 1 / 6;
+//     > div{
         
-    }
-}
+//         //background-color: #f7f5f3;
+//         border-radius: 18px;
+//         //padding: 40px;
+//         display: grid;
+//         grid-template-columns: 1fr 1fr;
+//         column-gap: 20px;
+//     }
+//     > p{
+//         line-height: 100%;
+//     }
+   
+//     > div > div{
+//         grid-column: span 1;
+//     }
+
+//     .select{
+//         width: 100%;
+//         box-sizing: border-box;
+//     }
+//     #strat, #watchlist{
+//         grid-column: span 2;
+//     }
+//     @media screen and (max-width: 768px){
+//         grid-column: 1/13;
+//         padding: 20px 0px;
+
+            
+//     }
+// }
  
 
-#try-code{
-    position: relative;
-    grid-column: 6 / 13;
-    background-color: #292c38;
-    border-radius: 20px;
-    z-index: 1;
-    display: grid;
-    grid-template-columns: 40px 1fr;
-    grid-template-rows: 36px 1fr;
-    overflow: hidden;
+// #try-code{
+//     position: relative;
+//     grid-column: 6 / 13;
+//     background-color: #292c38;
+//     border-radius: 20px;
+//     z-index: 1;
+//     display: grid;
+//     grid-template-columns: 40px 1fr;
+//     grid-template-rows: 36px 1fr;
+//     overflow: hidden;
 
-    @media screen and (max-width: 768px){
-        grid-column: 1/13;
-    }
+//     @media screen and (max-width: 768px){
+//         grid-column: 1/13;
+//     }
     
-}
+// }
 .code-header{
     grid-column: 1/3;
     grid-row: 1/2;
@@ -256,20 +255,20 @@
 .code-content{
     grid-column: 2/3;
     grid-row: 2/3;
-    font-family: 'Fira Code';
-    font-size: 0.9rem;
-    line-height: 1.3rem;
-    color:rgb(243, 243, 243);
     overflow-x: scroll;
     padding-left: 20px;
 
     div{
         white-space: pre-wrap;
         width:200%;
+        font-family: 'Fira Code';
+        font-size: 0.9rem;
+        line-height: 1.3rem;
+        color:rgb(243, 243, 243);
     }
 
     @media screen and (max-width: 768px){
-         overflow-x: scroll;
+         // overflow-x: scroll;
     }
    
 }
