--- a/css/tutorial_page.css
+++ b/css/tutorial_page.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
-html {
-  font-size: 16px;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+:root {
+  --main_width: 1000px;
+  --narrow_width: 700px;
 }
 
 body {
@@ -14,343 +18,34 @@ main {
 }
 
 section {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 30px;
   margin: 0px auto;
-  padding: 60px;
-  width: 1000px;
+  width: var(--main_width);
 }
-section > * {
-  grid-column: 1/-1;
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   section {
     width: 90%;
     margin: 50px 5%;
     padding: 0px;
   }
 }
-nav {
-  box-shadow: 0px 0.5px 30px rgba(67, 70, 75, 0.015), 0px 5px 32px -2px rgba(32, 34, 46, 0.06);
-  width: 100%;
-  position: fixed;
-  top: 0;
-  padding: 15px 0px;
-  z-index: 1;
-  display: flex;
-  backdrop-filter: blur(5px);
-  background-color: rgba(255, 255, 255, 0.877);
-}
-nav ul {
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-nav ul li {
-  margin: 0 20px;
-  display: inline-block;
-}
-nav ul li a {
-  text-decoration: none;
-  font-family: "Inter";
-  color: #252525;
-}
 
-@media screen and (max-width: 768px) {
-  nav {
-    width: 100%;
-  }
-  nav ul {
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    align-items: center;
-  }
-  nav ul li {
-    margin: 0 20px;
-    display: inline-block;
-  }
-  nav ul li a {
-    text-decoration: none;
-    font-family: "Inter";
-    color: #252525;
-  }
+nav {
+  justify-content: center;
+}
+nav > div {
+  width: var(--main_width);
 }
 table {
   text-align: left;
 }
 
-button {
-  box-shadow: 0px 1px 30px rgba(67, 70, 75, 0.03), 0px 10px 34px -4px rgba(32, 34, 46, 0.07);
-  padding: 10px 20px;
-  font-family: "Inter";
-  color: white;
-  background-color: #131313;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-h1, h2, h3, h4, h5, h6, th {
-  font-family: "Manrope", sans-serif;
-  line-height: 95%;
-  color: #202325;
-}
-
 p, ul, li, a, td {
   font-family: "Inter", sans-serif;
-  font-size: 1rem;
-  line-height: 150%;
-  color: #757575;
-}
-
-h1 {
-  font-size: 3rem;
-  letter-spacing: -0.05em;
-  font-weight: 800;
-}
-
-h2 {
-  font-size: 3rem;
-  letter-spacing: -0.05em;
-}
-
-a {
-  font-family: "Inter", sans-serif;
-  text-decoration: none;
-  color: inherit;
-}
-
-th {
-  font-size: 1rem;
-  border-bottom: 1px #b4b4b4 solid;
-}
-
-td {
-  border-bottom: 1px #b4b4b4 solid;
+  color: #4e4e4e;
 }
 
 code, pre {
   font-family: "Fira Code", monospace;
-}
-
-footer {
-  position: relative;
-  display: flex;
-  background-color: #ececec;
-  width: 100%;
-  height: 300px;
-}
-footer > div {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 30px;
-  width: 1000px;
-  margin: 50px auto;
-}
-footer > div > div {
-  grid-column: span 4;
-}
-footer > div > div > * {
-  display: block;
-}
-
-nav #logo {
-  position: absolute;
-  left: calc(50% - 500px);
-  width: 100px;
-  height: 30px;
-}
-@media screen and (max-width: 768px) {
-  nav #logo {
-    left: 10px;
-    width: 30px;
-    overflow: hidden;
-  }
-}
-nav #github {
-  position: absolute;
-  right: calc(50% - 500px);
-}
-nav img {
-  height: 25px;
-}
-
-.card {
-  border-radius: 8px;
-  padding: 25px;
-  grid-column: span 4;
-}
-.card.col-2 {
-  grid-column: span 6;
-}
-.card.col-3 {
-  grid-column: span 4;
-}
-.card.col-4 {
-  grid-column: span 3;
-}
-@media screen and (max-width: 768px) {
-  .card {
-    margin: 10px 0px;
-    grid-column: span 12;
-  }
-  .card.col-2 {
-    grid-column: span 12;
-  }
-  .card.col-3 {
-    grid-column: span 12;
-  }
-  .card.col-4 {
-    grid-column: span 12;
-  }
-}
-.card.clickable {
-  cursor: pointer;
-}
-.card.nonclickable {
-  cursor: not-allowed;
-}
-.card h2 {
-  font-size: 35px;
-  width: 90%;
-  line-height: 100%;
-}
-
-.shadow {
-  box-shadow: 0px 1px 30px rgba(67, 70, 75, 0.03), 0px 10px 34px -4px rgba(32, 34, 46, 0.07);
-}
-
-.shadow-dark {
-  box-shadow: 0px 6px 30px rgba(67, 70, 75, 0.18), 0px 60px 54px -24px rgba(32, 34, 46, 0.17);
-}
-
-button {
-  font-size: 1rem;
-  background: #08c746;
-  background: linear-gradient(144deg, #08c746 0%, #abdb0c 100%);
-}
-
-.select:hover {
-  box-shadow: 0px 0px 30px rgba(67, 70, 75, 0), 0px 0px 30px 0px rgba(32, 34, 46, 0.05);
-}
-
-.select {
-  box-shadow: 0px 0.5px 30px rgba(67, 70, 75, 0.015), 0px 5px 32px -2px rgba(32, 34, 46, 0.06);
-  position: relative;
-  padding: 8px 14px;
-  display: inline-block;
-  width: 150px;
-  border: 1px solid #e8e9ec;
-  border-radius: 8px;
-  background-color: white;
-  cursor: pointer;
-}
-.select p {
-  margin: 0;
-  color: #494949;
-}
-.select div {
-  width: 178px;
-  position: absolute;
-  top: calc(100% + 5px);
-  left: 0px;
-  cursor: pointer;
-  font-size: 1rem;
-  background-color: #fafafa;
-  box-shadow: 0px 0.5px 30px rgba(67, 70, 75, 0.015), 0px 5px 32px -2px rgba(32, 34, 46, 0.06);
-  border: 0px solid #cecfd3;
-  border-radius: 8px;
-  overflow-y: hidden;
-  display: inline-block;
-}
-.select div li {
-  margin: 5px 8px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  padding: 5px 10px;
-  list-style: none;
-}
-.select div li:hover {
-  background-color: #e2e2e2;
-  transition: 0.2s ease-in-out;
-}
-.select div p {
-  font-family: "Inter";
-  font-size: 1rem;
-  padding: 1px 10px;
-  margin: 0px;
-}
-.select.open {
-  border-color: #2ab468;
-  box-shadow: 0px 0px 10px #18b432;
-}
-.select.open div {
-  transition: 0.2s ease-in-out;
-  border-width: 1px;
-  padding: 8px 0px;
-}
-
-.text {
-  padding: 9px 5px;
-  border-radius: 4px;
-  font-family: "Inter";
-  outline: none;
-  resize: none;
-  background-color: whitesmoke;
-}
-.text:focus {
-  border-color: #2ab468;
-  box-shadow: 0px 0px 10px #18b432;
-}
-
-article {
-  width: 1000px;
-  margin: 0 auto;
-  margin-top: 200px;
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 30px;
-}
-@media screen and (max-width: 768px) {
-  article {
-    width: 90%;
-  }
-}
-article header, article h1, article h2, article h3, article h4, article p, article ul {
-  grid-column: 3/-3;
-}
-@media screen and (max-width: 768px) {
-  article header, article h1, article h2, article h3, article h4, article p, article ul {
-    grid-column: 1/-1;
-  }
-}
-article pre, article code {
-  grid-column: 3/-3;
-}
-@media screen and (max-width: 768px) {
-  article pre, article code {
-    grid-column: 1/-1;
-  }
-}
-article img {
-  width: 100%;
-}
-article h1 {
-  font-size: 40px;
-}
-article h2 {
-  font-size: 30px;
-}
-article h3 {
-  font-size: 20px;
-}
-article h4 {
-  font-size: 16px;
 }
 
 /*# sourceMappingURL=tutorial_page.css.map */
