--- a/css/docs.css
+++ b/css/docs.css
@@ -1,25 +1,3 @@
-.card {
-  background-color: #f1f1f1;
-}
-
-.menu {
-  display: inline-block;
-  width: 300px;
-  height: 100vh;
-  position: fixed;
-  background-color: #f7f7f7;
-  padding: 30px;
-  box-sizing: border-box;
-}
-@media screen and (max-width: 768px) {
-  .menu {
-    display: none;
-  }
-}
-.menu a {
-  display: block;
-}
-
 section {
   margin-left: 300px;
   width: auto;
@@ -67,7 +45,7 @@ section .method .long {
 section .method > h2 {
   font-size: 2rem;
   line-height: 2.2rem;
-  color: #7c7c7c;
+  color: rgb(124, 124, 124);
 }
 @media screen and (max-width: 768px) {
   section .method > h2 {
@@ -76,13 +54,13 @@ section .method > h2 {
   }
 }
 section .method > h2 .name {
-  color: #202020;
+  color: rgb(32, 32, 32);
 }
 section .method > h2 .comma {
-  color: #888888;
+  color: rgb(136, 136, 136);
 }
 section .method > h2 .param {
-  color: #02a597;
+  color: rgb(2, 165, 151);
 }
 section .method > h2 .req {
   color: #0ebb1c;
@@ -109,7 +87,7 @@ section .param {
 section .param > span {
   height: 2px;
   width: 100%;
-  background-color: #e9e9e9;
+  background-color: rgb(233, 233, 233);
   display: block;
 }
 section .param > h3 {
@@ -136,7 +114,7 @@ section .method-param p {
   font-size: 0.8rem;
 }
 section .method-param .a {
-  color: #272727;
+  color: rgb(39, 39, 39);
   min-width: 10%;
 }
 section .method-param .b {
