--- a/css/landing.css
+++ b/css/landing.css
@@ -1,46 +1,3 @@
-#main {
-  display: block;
-}
-#main h1, #main p, #main a {
-  margin: 0 auto;
-  text-align: center;
-  display: block;
-}
-#main h1 {
-  width: 600px;
-  line-height: 100%;
-  font-size: 5rem;
-  margin-top: 15rem;
-}
-#main p {
-  margin-top: 2rem;
-  font-size: 1.2rem;
-  line-height: 1.6rem;
-  width: 500px;
-}
-#main a {
-  margin: 80px auto;
-  margin-bottom: 100px;
-}
-
-@media screen and (max-width: 768px) {
-  #main h1 {
-    width: 80%;
-    line-height: 100%;
-    font-size: 4rem;
-    margin-top: 10rem;
-  }
-  #main p {
-    margin-top: 1.5rem;
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    width: 80%;
-  }
-  #main a {
-    margin: 40px auto;
-    margin-bottom: 50px;
-  }
-}
 @keyframes wave {
   0% {
     transform: rotateZ(-30deg);
@@ -59,25 +16,11 @@
   margin-left: 5px;
 }
 
-#intro h2 {
-  font-size: 3.3rem;
-}
-#intro p {
-  font-size: 1.5rem;
-  line-height: 130%;
-}
 #intro .card {
   padding: 50px;
   border-radius: 30px;
 }
 @media screen and (max-width: 768px) {
-  #intro h2 {
-    font-size: 2.5rem;
-  }
-  #intro p {
-    font-size: 1.3rem;
-    line-height: 130%;
-  }
   #intro .card {
     padding: 30px;
   }
@@ -86,112 +29,63 @@
 #beginner-friendly {
   background-color: white;
 }
-#beginner-friendly h2 {
-  background: #00d1ff;
+#beginner-friendly h1 {
+  background: rgb(0, 209, 255);
   background: -webkit-linear-gradient(70deg, #3EE90C 0%, #ADEB1D 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-#beginner-friendly h2 > span {
-  -webkit-text-fill-color: white;
 }
 
 #modular-moddable {
   background-color: #252D35;
 }
-#modular-moddable h2 {
-  background: #00d1ff;
-  background: -webkit-linear-gradient(70deg, #3affff 0%, #d300ff 100%);
+#modular-moddable h1 {
+  background: rgb(0, 209, 255);
+  background: -webkit-linear-gradient(70deg, rgb(58, 255, 255) 0%, rgb(211, 0, 255) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-#modular-moddable h2 > span {
-  -webkit-text-fill-color: white;
 }
 #modular-moddable p {
   color: white;
 }
 
-#try > div > * {
-  display: inline-block;
-}
-#try > h2 {
-  text-align: left;
-  font-size: 5rem;
-  margin-bottom: 0rem;
-}
-@media screen and (max-width: 768px) {
-  #try > h2 {
-    font-size: 2rem;
-  }
-}
-#try h4 {
+#config h4 {
   width: 100%;
-  text-transform: uppercase;
   font-weight: 400;
   font-size: 0.8rem;
-  letter-spacing: 0.3rem;
-  color: #858585;
+  letter-spacing: 0.05rem;
+  color: rgb(133, 133, 133);
   margin: 23px 0px 9px 0px;
 }
-#try > p {
+#config > p {
   text-align: left;
-  font-size: 1.4rem;
-  margin-top: 0.8rem;
-  margin-bottom: 3rem;
-  line-height: 120%;
   width: 40%;
 }
 @media screen and (max-width: 768px) {
-  #try > p {
-    font-size: 1.2rem;
+  #config > p {
     width: 100%;
   }
 }
 
-#symbols {
-  background-color: #f3f3f3;
-  min-width: 150px;
-}
-#symbols span {
+#watchlist span {
   background-color: #188d7d;
   box-shadow: 0px 2px 10px rgba(33, 46, 51, 0.14);
   border-radius: 20px;
-  padding: 5px 15px;
-  color: white;
+  padding: 0px;
   font-weight: bold;
-  margin: 0px 5px;
-}
-
-#try-text {
-  grid-column: 1/6;
-  border-radius: 18px;
-}
-#try-text > p {
-  line-height: 100%;
-}
-@media screen and (max-width: 768px) {
-  #try-text {
-    grid-column: 1/13;
-    padding: 20px;
-  }
-}
-
-#try-code {
-  position: relative;
-  grid-column: 6/13;
-  background-color: #292c38;
-  border-radius: 20px;
-  z-index: 1;
-  display: grid;
-  grid-template-columns: 40px 1fr;
-  grid-template-rows: 36px 1fr;
   overflow: hidden;
 }
-@media screen and (max-width: 768px) {
-  #try-code {
-    grid-column: 1/13;
-  }
+#watchlist span button {
+  padding: 3px 10px;
+  transition: 0.2s;
+}
+#watchlist span button:hover {
+  background-color: #08473f;
+}
+#watchlist span p {
+  margin: 5px 5px 5px 15px;
+  color: white;
+  display: inline;
 }
 
 .code-header {
@@ -230,23 +124,17 @@
 .code-content {
   grid-column: 2/3;
   grid-row: 2/3;
-  font-family: "Fira Code";
-  font-size: 0.9rem;
-  line-height: 1.3rem;
-  color: #f3f3f3;
   overflow-x: scroll;
   padding-left: 20px;
 }
 .code-content div {
   white-space: pre-wrap;
   width: 200%;
+  font-family: "Fira Code";
+  font-size: 0.9rem;
+  line-height: 1.3rem;
+  color: rgb(243, 243, 243);
 }
-@media screen and (max-width: 768px) {
-  .code-content {
-    overflow-x: scroll;
-  }
-}
-
 .line-numbers {
   grid-column: 1/2;
   grid-row: 2/3;
