deploy: cc40572e43af404bd4c2c3508dd53d31e4297707

--- a/css/tw.css
+++ b/css/tw.css
@@ -37,4 +37,8 @@ article .mockup-code {
   @apply pl-7 my-1 list-disc;
 }
 
+table {
+  @apply table table-compact my-4;
+}
+
 /*# sourceMappingURL=tw.css.map */
