--- a/src/components/DocPre.astro
+++ b/src/components/DocPre.astro
@@ -1,5 +1,5 @@
 ---
-const props = Astro.props;
+// const props = Astro.props;
 ---
 <div class="code-container"><div><pre><slot /></pre></div></div>
 <style>
