--- a/src/components/DocCode.astro
+++ b/src/components/DocCode.astro
@@ -1,5 +1,5 @@
 ---
-const props = Astro.props;
+// const props = Astro.props;
 //const html = await Astro.slots.render('default')
 ---
 <code><slot /></code>
