--- a/src/components/DocDataFrame.astro
+++ b/src/components/DocDataFrame.astro
@@ -1,10 +1,10 @@
 ---
 const props = Astro.props;
-const columns = props.columns;
+const columns: Record<string, Record<string, any>> = props.columns;
 const index = props.index;
 const data = props.data;
 // For now, assume that multi-level columns have no more than 2 levels
-const level1num = columns.length;
+// const level1num = columns.length;
 let level2num = 1;
 for (const [_, value1] of Object.entries(columns)) {
     level2num += Object.keys(value1).length;
@@ -28,7 +28,7 @@ for (const [_, value1] of Object.entries(columns)) {
     <div class="dataframe-line"></div>
     <div class="dataframe-row">
         <h3>{index}</h3>
-        {Object.entries(data).map(([key1, value1]) =>
+        {Object.entries(data).map(([_, value1]) =>
             <p>{value1}</p>
         )}
     </div>
